--- a/Spring Security/spring-security-jpa/src/main/resources/application.properties
+++ b/Spring Security/spring-security-jpa/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/sms?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username = root
-spring.datasource.password = Harshil@0125
+spring.datasource.password = ""
 
 #Hibernate
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
